Removing file usage. Adding settings for both server address and update rate update.

--- a/WpfApp1/App.config
+++ b/WpfApp1/App.config
@@ -11,10 +11,10 @@
     <userSettings>
         <Client_for_Traccar.Properties.Settings>
             <setting name="connectionTimeOut" serializeAs="String">
-                <value>0</value>
+                <value>60</value>
             </setting>
             <setting name="serverLink" serializeAs="String">
-                <value />
+                <value>http://demo3.traccar.org</value>
             </setting>
         </Client_for_Traccar.Properties.Settings>
     </userSettings>
