--- a/WpfApp1/Client for Traccar.csproj
+++ b/WpfApp1/Client for Traccar.csproj
@@ -199,5 +199,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\plus.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
