--- a/WpfApp1/App.config
+++ b/WpfApp1/App.config
@@ -1,21 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Client_for_Traccar.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
-    <userSettings>
-        <Client_for_Traccar.Properties.Settings>
-            <setting name="connectionTimeOut" serializeAs="String">
-                <value>5</value>
-            </setting>
-            <setting name="serverLink" serializeAs="String">
-                <value>http://demo3.traccar.org</value>
-            </setting>
-        </Client_for_Traccar.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Client_for_Traccar.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+  </startup>
+  <userSettings>
+    <Client_for_Traccar.Properties.Settings>
+      <setting name="connectionTimeOut" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="serverLink" serializeAs="String">
+        <value>http://demo3.traccar.org</value>
+      </setting>
+    </Client_for_Traccar.Properties.Settings>
+  </userSettings>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
+  </connectionStrings>
 </configuration>
