Changing systray icon for pause and resume. Adding infos about the state of the sender.

--- a/WpfApp1/Client for Traccar.csproj
+++ b/WpfApp1/Client for Traccar.csproj
@@ -220,5 +220,11 @@
   <ItemGroup>
     <None Include="assets\icon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\onlyPause.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\onlyPause.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
