First menu (for devices) version

--- a/Client-for-Traccar/Client for Traccar.csproj
+++ b/Client-for-Traccar/Client for Traccar.csproj
@@ -114,6 +114,10 @@
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
     <Compile Include="ThreadForGPS.cs" />
+    <Page Include="Styles\generalMenuStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\MainStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
