Enhancing radiobutton style. Giving user the opportunity to add select from multiple devices.

--- a/Client-for-Traccar/App.config
+++ b/Client-for-Traccar/App.config
@@ -16,6 +16,16 @@
       <setting name="serverLink" serializeAs="String">
         <value>http://demo3.traccar.org</value>
       </setting>
+      <setting name="devicesListRes" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+            <string>defaultValue</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+      <setting name="defaultDeviceName" serializeAs="String">
+        <value>defaultWrong</value>
+      </setting>
     </Client_for_Traccar.Properties.Settings>
   </userSettings>
   <connectionStrings>
