--- a/Client-for-Traccar/Properties/Settings.settings
+++ b/Client-for-Traccar/Properties/Settings.settings
@@ -9,7 +9,13 @@
       <Value Profile="(Default)">http://demo3.traccar.org</Value>
     </Setting>
     <Setting Name="devicesListRes" Type="System.Collections.Specialized.StringCollection" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;string&gt;defaultValue&lt;/string&gt;
+&lt;/ArrayOfString&gt;</Value>
+    </Setting>
+    <Setting Name="defaultDeviceName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">defaultWrong</Value>
     </Setting>
   </Settings>
 </SettingsFile>
