Adding methods to reset and set both the StringCollection and the selected device Adding new checks for both connection and gps

--- a/Client-for-Traccar/Client for Traccar.csproj
+++ b/Client-for-Traccar/Client for Traccar.csproj
@@ -230,5 +230,8 @@
   <ItemGroup>
     <None Include="assets\onlyPause.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\trash-can.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
