--- a/Client-for-Traccar/Client for Traccar.csproj
+++ b/Client-for-Traccar/Client for Traccar.csproj
@@ -59,7 +59,8 @@
     <StartupObject>Client_for_Traccar.App</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>C8E3699F9466A9FC4212E2ADB59D24ED31AC1970</ManifestCertificateThumbprint>
@@ -190,9 +191,6 @@
     <Resource Include="assets\location-sign.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="icon.ico" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="assets\icon.png" />
   </ItemGroup>
   <ItemGroup>
@@ -235,6 +233,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="onlyPause.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
