Working on icons

--- a/Client-for-Traccar/Client for Traccar.csproj
+++ b/Client-for-Traccar/Client for Traccar.csproj
@@ -59,8 +59,7 @@
     <StartupObject>Client_for_Traccar.App</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>C8E3699F9466A9FC4212E2ADB59D24ED31AC1970</ManifestCertificateThumbprint>
@@ -236,6 +235,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\it_flag_icon_251630.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
