--- a/Client-for-Traccar/Client for Traccar.csproj
+++ b/Client-for-Traccar/Client for Traccar.csproj
@@ -92,6 +92,7 @@
     <Reference Include="System.Management" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Input.Manipulations" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
